Bug#36701 memory leak in mysqld when executing simple join on clustered tables